feat: add safe image deletion
